contrib/curry/ingress-internal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: _-int
  labels:
    app.kubernetes.io/name: _
    app.kubernetes.io/instance: internal
    app.kubernetes.io/managed-by: kustomize-ingress
spec:
  ingressClassName: internal
  rules:
    - host: _.terabox.moe
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: _
                port: 
                  name: _
